--- a/AppFilRougeLibrary/FilRouge.Model/App.config
+++ b/AppFilRougeLibrary/FilRouge.Model/App.config
@@ -37,7 +37,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.data>
 
