--- a/AppFilRougeLibrary/FilRouge.Web/FilRouge.Web.csproj
+++ b/AppFilRougeLibrary/FilRouge.Web/FilRouge.Web.csproj
@@ -222,11 +222,10 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
-    <Compile Include="Models\QuestionResponseQuizzModel.cs" />
+    <Compile Include="Models\UserQuestionResponseModel.cs" />
     <Compile Include="Models\TechnologyModels.cs" />
     <Compile Include="Models\QuestionModels.cs" />
-    <Compile Include="Models\QuestionQuizzModels.cs" />
-    <Compile Include="Models\QuizzModel.cs" />
+    <Compile Include="Models\UserQuizzModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -305,7 +304,8 @@
     <Content Include="Views\Question\Edit.cshtml" />
     <Content Include="Views\Question\Delete.cshtml" />
     <Content Include="Views\Shared\_UserLayout.cshtml" />
-    <Content Include="Views\UserQuizz\QuestionResponse.cshtml" />
+    <Content Include="Views\UserQuizz\UserQuizz.cshtml" />
+    <Content Include="Views\UserQuizz\_QuestionResponses.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
