Ajout des tests unitaires

--- a/AppFilRougeLibrary/FilRouge.UnitTests/FilRouge.UnitTests.csproj
+++ b/AppFilRougeLibrary/FilRouge.UnitTests/FilRouge.UnitTests.csproj
@@ -45,6 +45,7 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
@@ -57,6 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Services\QuestionTests\GetQuestion.cs" />
+    <Compile Include="Services\QuizzTests\UnitTestQuiz.cs" />
     <Compile Include="TestReference.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -68,7 +70,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Services\QuizzTests\" />
     <Folder Include="Services\ResponseTests\" />
   </ItemGroup>
   <ItemGroup>
@@ -79,6 +80,10 @@
     <ProjectReference Include="..\FilRouge.Service\FilRouge.Service.csproj">
       <Project>{6bc8bd20-2799-4150-9ddd-e148bd875bde}</Project>
       <Name>FilRouge.Service</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FilRouge.Tests\FilRouge.Tests.csproj">
+      <Project>{465e3bd9-592d-424b-a063-39113f5a407f}</Project>
+      <Name>FilRouge.Tests</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
