--- a/AppFilRougeLibrary/FilRouge.UnitTests/App.config
+++ b/AppFilRougeLibrary/FilRouge.UnitTests/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+    <add name="ConnexionStringFilRouge" connectionString="Data Source=localhost;Initial Catalog=FilRouge;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
