--- a/AppFilRougeLibrary/FilRouge.API/FilRouge.API.csproj
+++ b/AppFilRougeLibrary/FilRouge.API/FilRouge.API.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Controllers\QuestionQuizzController.cs" />
     <Compile Include="Controllers\QuizzController.cs" />
     <Compile Include="Controllers\ReferenceController.cs" />
+    <Compile Include="Controllers\ResponseController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -271,6 +272,7 @@
     <Compile Include="Models\QuestionModel.cs" />
     <Compile Include="Models\QuestionQuizzModel.cs" />
     <Compile Include="Models\QuizzModel.cs" />
+    <Compile Include="Models\ReponseModel.cs" />
     <Compile Include="Models\TechnologyModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
